Added 2nd axis label for weekly sequencing, set variant ordering so it's most-to-least, expanded coloring to account for new variants

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="robots" content="index">
+  <meta name="Description" CONTENT="covid-19, viral, sequencing, broad institute">
+
   <meta charset="utf-8">
-  <title>BroadCovidDashboard</title>
+  <title>Broad Covid Dashboard</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=.5">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
